Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 <li>ئۇيغۇرچە كىرگۈزگۈچ قوشۇلدى.يۇلغۇن تورى تەمىنلىگەن ئۇيغۇرچە كىرگۈزگۈچ ئىشلىتىلدى.</li>
 </ul>
 
+<h3>
+<a id="سىناق-ئادرىسى" class="anchor" href="#%D8%B3%D9%89%D9%86%D8%A7%D9%82-%D8%A6%D8%A7%D8%AF%D8%B1%D9%89%D8%B3%D9%89" aria-hidden="true"><span class="octicon octicon-link"></span></a>سىناق ئادرىسى</h3>
+
+<p><a href="http://lab.uyghurdev.net/bootstrapuyghur/bootstrap-uyghur-master/Test.html">ئۈنۈمىنى كۆرۈش</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Sarwan/bootstrap-uyghur">Bootstrap-uyghur</a> is maintained by <a href="https://github.com/Sarwan">Sarwan</a>.</span>
 
