--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
+  <body dir="rtl">
     <section class="page-header">
       <h1 class="project-name">Bootstrap-uyghur</h1>
       <h2 class="project-tagline">twitter bootstap for uyghur language</h2>
